# Freeswitch_E2EE

./: README.md  libfreeswitch_la-cJSON.lo  libfreeswitch_la-cJSON_Utils.lo  libfreeswitch_la-g711.lo  libfreeswitch_la-switch_apr.lo  libfreeswitch_la-switch_apr_queue.lo  libfreeswitch_la-switch_buffer.lo  libfreeswitch_la-switch_caller.lo  libfreeswitch_la-switch_channel.lo  libfreeswitch_la-switch_config.lo  libfreeswitch_la-switch_console.lo  libfreeswitch_la-switch_core.lo  libfreeswitch_la-switch_core_asr.lo  libfreeswitch_la-switch_core_cert.lo  libfreeswitch_la-switch_core_codec.lo  libfreeswitch_la-switch_core_db.lo  libfreeswitch_la-switch_core_directory.lo  libfreeswitch_la-switch_core_event_hook.lo  libfreeswitch_la-switch_core_file.lo  libfreeswitch_la-switch_core_hash.lo  libfreeswitch_la-switch_core_io.lo  libfreeswitch_la-switch_core_media.lo  libfreeswitch_la-switch_core_media_bug.lo  libfreeswitch_la-switch_core_memory.lo  libfreeswitch_la-switch_core_port_allocator.lo  libfreeswitch_la-switch_core_rwlock.lo  libfreeswitch_la-switch_core_session.lo  libfreeswitch_la-switch_core_speech.lo  libfreeswitch_la-switch_core_sqldb.lo  libfreeswitch_la-switch_core_state_machine.lo  libfreeswitch_la-switch_core_timer.lo  libfreeswitch_la-switch_core_video.lo  libfreeswitch_la-switch_curl.lo  libfreeswitch_la-switch_dso.lo  libfreeswitch_la-switch_estimators.lo  libfreeswitch_la-switch_event.lo  libfreeswitch_la-switch_hashtable.lo  libfreeswitch_la-switch_ivr.lo  libfreeswitch_la-switch_ivr_async.lo  libfreeswitch_la-switch_ivr_bridge.lo  (+41 more)
mod/applications/mod_gw/: ,  (+9 more)
(+385 files in other folders)
